@@ -1,3 +1,8 @@
+% HISTORY_DEPENDENCE_EXPT Produces a .mat file that contains input signals used to drive magnets during a history dependence expt
+%
+% 3DFM function
+% specific/rheology/driven_bead
+% last modified 11/20/08 (krisford)
 % Driven rheology
 % 
 % This matlab script will construct and save a .mat file that contains the
