@@ -1,11 +1,13 @@
 function F = thinningexpt_reqs_rod(gammadot, appvisc, d, L, plot_title)
-% 3DFM function  
-% Rheology/DMBR
-% last modified 09-Sep-2008 (jcribb)
+% THINNINGEXPT_REQS_ROD Generates figure/calibration used to examine required forces needed to obtain max shear rates around an actuated rod
+%
+% 3DFM function
+% specific/rheology/driven_bead
+% last modified 11/20/08 (krisford)
 %  
 % This function generates the figure/calibration that is used to examine 
 % the required forces 'F' needed to obtain maximum shear rates 'gammadot' 
-% around an actuated sphere with radius 'a'.  
+% around an actuated rod with radius 'a'.  
 %
 % The material around the sphere is assumed to be a shear-thinning material
 % with a zero-shear viscosity 'eta0' and an infinite-shear viscosity
